test/files/neg/t5182.check
t5182.scala:2: error: unknown annotation argument name: qwe
  @java.lang.Deprecated(qwe = "wer") def ok(q:Int) = 1
                            ^
t5182.scala:3: error: unknown annotation argument name: value
  @java.lang.Deprecated("wer") def whereAmI(q:Int) = 1
                        ^
two errors found
